--- a/archives/toutiao-search/2023-10-13.md
+++ b/archives/toutiao-search/2023-10-13.md
@@ -1,57 +1,74 @@
 # 2023-10-13
 
-共 322 条
+共 335 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 13 2023 22:00:54 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Oct 13 2023 23:00:53 GMT+0800 (China Standard Time) -->
 1. [孙海洋痛哭称准备上诉](https://so.toutiao.com/search?keyword=孙海洋痛哭称准备上诉)
 1. [奥运冠军杨威自曝要终身佩戴呼吸机](https://so.toutiao.com/search?keyword=奥运冠军杨威自曝要终身佩戴呼吸机)
 1. [从“大写意”到“工笔画”](https://so.toutiao.com/search?keyword=从“大写意”到“工笔画”)
-1. [为何一夜之间美元停止加息](https://so.toutiao.com/search?keyword=为何一夜之间美元停止加息)
-1. [俄罗斯小朋友组团到黑河吃早餐](https://so.toutiao.com/search?keyword=俄罗斯小朋友组团到黑河吃早餐)
-1. [男子在小区低空飞无人机被当场砸落](https://so.toutiao.com/search?keyword=男子在小区低空飞无人机被当场砸落)
-1. [武汉大学涉性骚扰男生被记过](https://so.toutiao.com/search?keyword=武汉大学涉性骚扰男生被记过)
+1. [100元能在东北早市买到啥](https://so.toutiao.com/search?keyword=100元能在东北早市买到啥)
+1. [京东回应刘姓商人被抓谣言](https://so.toutiao.com/search?keyword=京东回应刘姓商人被抓谣言)
 1. [大妈南京大屠杀纪念馆比耶拍照遭呵斥](https://so.toutiao.com/search?keyword=大妈南京大屠杀纪念馆比耶拍照遭呵斥)
+1. [为何一夜之间美元停止加息](https://so.toutiao.com/search?keyword=为何一夜之间美元停止加息)
+1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
 1. [郑州消防辟谣加油站爆炸](https://so.toutiao.com/search?keyword=郑州消防辟谣加油站爆炸)
-1. [媒体谈为何俄对巴以冲突谨言慎行](https://so.toutiao.com/search?keyword=媒体谈为何俄对巴以冲突谨言慎行)
+1. [女子脱光“小三”衣服游街被判刑](https://so.toutiao.com/search?keyword=女子脱光“小三”衣服游街被判刑)
 1. [以色列“撤离令”引发加沙民众恐慌](https://so.toutiao.com/search?keyword=以色列“撤离令”引发加沙民众恐慌)
+1. [美国“左派”因为巴以起“内讧”](https://so.toutiao.com/search?keyword=美国“左派”因为巴以起“内讧”)
 1. [黎巴嫩将提交针对以色列的紧急抗议](https://so.toutiao.com/search?keyword=黎巴嫩将提交针对以色列的紧急抗议)
-1. [以军承认军方未能阻止哈马斯袭击](https://so.toutiao.com/search?keyword=以军承认军方未能阻止哈马斯袭击)
 1. [警方通报山东一男子当街鞭打女子](https://so.toutiao.com/search?keyword=警方通报山东一男子当街鞭打女子)
-1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
 1. [哈马斯向以色列发射数百枚火箭弹](https://so.toutiao.com/search?keyword=哈马斯向以色列发射数百枚火箭弹)
+1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
 1. [马来西亚女星曾若冰去世](https://so.toutiao.com/search?keyword=马来西亚女星曾若冰去世)
+1. [杨氏家族给碧桂园3亿美元无息借款](https://so.toutiao.com/search?keyword=杨氏家族给碧桂园3亿美元无息借款)
+1. [巴以冲突 为何叙利亚被轰炸](https://so.toutiao.com/search?keyword=巴以冲突+为何叙利亚被轰炸)
+1. [人社局人员拍桌子怒斥群众被清退](https://so.toutiao.com/search?keyword=人社局人员拍桌子怒斥群众被清退)
+1. [姑姑结婚小侄子搞笑致辞](https://so.toutiao.com/search?keyword=姑姑结婚小侄子搞笑致辞)
+1. [中国手提袋风靡非洲成“致富口袋”](https://so.toutiao.com/search?keyword=中国手提袋风靡非洲成“致富口袋”)
+1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
+1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
+1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
+1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
+1. [“东伊运”参与对叙空袭？中方回应](https://so.toutiao.com/search?keyword=“东伊运”参与对叙空袭？中方回应)
+1. [央行行长潘功胜会见美财政部长](https://so.toutiao.com/search?keyword=央行行长潘功胜会见美财政部长)
+1. [媒体谈为何俄对巴以冲突谨言慎行](https://so.toutiao.com/search?keyword=媒体谈为何俄对巴以冲突谨言慎行)
+1. [西安公布落户新政](https://so.toutiao.com/search?keyword=西安公布落户新政)
+1. [豆腐脑甜咸之争终于能和解了](https://so.toutiao.com/search?keyword=豆腐脑甜咸之争终于能和解了)
+1. [4厅官与1名国企原董事长被决定逮捕](https://so.toutiao.com/search?keyword=4厅官与1名国企原董事长被决定逮捕)
+1. [男子欠30万不还 法院扣押109双球鞋](https://so.toutiao.com/search?keyword=男子欠30万不还+法院扣押109双球鞋)
+1. [小史密斯：球队立足于防守](https://so.toutiao.com/search?keyword=小史密斯：球队立足于防守)
+1. [京东物流成于京东困于京东](https://so.toutiao.com/search?keyword=京东物流成于京东困于京东)
+1. [拐骗儿童罪五年量刑轻了吗](https://so.toutiao.com/search?keyword=拐骗儿童罪五年量刑轻了吗)
+1. [王毅：中方将派特使赴中东](https://so.toutiao.com/search?keyword=王毅：中方将派特使赴中东)
+1. [男子在小区低空飞无人机被当场砸落](https://so.toutiao.com/search?keyword=男子在小区低空飞无人机被当场砸落)
+1. [业内揭秘黄牛割肉退周杰伦门票原因](https://so.toutiao.com/search?keyword=业内揭秘黄牛割肉退周杰伦门票原因)
+1. [涂磊评北极鲶鱼事件](https://so.toutiao.com/search?keyword=涂磊评北极鲶鱼事件)
+1. [“宁坐宝马哭”女子被曝情变失联](https://so.toutiao.com/search?keyword=“宁坐宝马哭”女子被曝情变失联)
+1. [余承东：又向问界供应链投了10个亿](https://so.toutiao.com/search?keyword=余承东：又向问界供应链投了10个亿)
+1. [小孩被父亲关在车库出租房3天](https://so.toutiao.com/search?keyword=小孩被父亲关在车库出租房3天)
+1. [洪秀柱挑战“科目三舞蹈”](https://so.toutiao.com/search?keyword=洪秀柱挑战“科目三舞蹈”)
+1. [美国会报告鼓吹准备同时与中俄开战](https://so.toutiao.com/search?keyword=美国会报告鼓吹准备同时与中俄开战)
+1. [记者：驾车闯中领馆嫌犯身份曝光](https://so.toutiao.com/search?keyword=记者：驾车闯中领馆嫌犯身份曝光)
+1. [华为2023年5G专利拥有量排名第一](https://so.toutiao.com/search?keyword=华为2023年5G专利拥有量排名第一)
+1. [肺炎支原体感染有何症状](https://so.toutiao.com/search?keyword=肺炎支原体感染有何症状)
+1. [中国女子赴美见男网友失联最新进展](https://so.toutiao.com/search?keyword=中国女子赴美见男网友失联最新进展)
+1. [被通缉电诈犯在缅有公职？警方回应](https://so.toutiao.com/search?keyword=被通缉电诈犯在缅有公职？警方回应)
+1. [俄罗斯小朋友组团到黑河吃早餐](https://so.toutiao.com/search?keyword=俄罗斯小朋友组团到黑河吃早餐)
+1. [武汉大学涉性骚扰男生被记过](https://so.toutiao.com/search?keyword=武汉大学涉性骚扰男生被记过)
+1. [以军承认军方未能阻止哈马斯袭击](https://so.toutiao.com/search?keyword=以军承认军方未能阻止哈马斯袭击)
 1. [巴以冲突 为何叙利亚被炸了](https://so.toutiao.com/search?keyword=巴以冲突+为何叙利亚被炸了)
 1. [哈马斯自行生产火箭炮曝光](https://so.toutiao.com/search?keyword=哈马斯自行生产火箭炮曝光)
 1. [美术馆通报高校女教授看展时坠亡](https://so.toutiao.com/search?keyword=美术馆通报高校女教授看展时坠亡)
-1. [杨氏家族给碧桂园3亿美元无息借款](https://so.toutiao.com/search?keyword=杨氏家族给碧桂园3亿美元无息借款)
-1. [涂磊评北极鲶鱼事件](https://so.toutiao.com/search?keyword=涂磊评北极鲶鱼事件)
 1. [女方妈妈要彩礼男子母亲认为是骗婚](https://so.toutiao.com/search?keyword=女方妈妈要彩礼男子母亲认为是骗婚)
-1. [人社局人员拍桌子怒斥群众被清退](https://so.toutiao.com/search?keyword=人社局人员拍桌子怒斥群众被清退)
-1. [美国会报告鼓吹准备同时与中俄开战](https://so.toutiao.com/search?keyword=美国会报告鼓吹准备同时与中俄开战)
-1. [小孩被父亲关在车库出租房3天](https://so.toutiao.com/search?keyword=小孩被父亲关在车库出租房3天)
 1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
-1. [豆腐脑甜咸之争终于能和解了](https://so.toutiao.com/search?keyword=豆腐脑甜咸之争终于能和解了)
-1. [小史密斯：球队立足于防守](https://so.toutiao.com/search?keyword=小史密斯：球队立足于防守)
 1. [男子吐槽服务区厕所入口被挡](https://so.toutiao.com/search?keyword=男子吐槽服务区厕所入口被挡)
-1. [中国手提袋风靡非洲成“致富口袋”](https://so.toutiao.com/search?keyword=中国手提袋风靡非洲成“致富口袋”)
-1. [业内揭秘黄牛割肉退周杰伦门票原因](https://so.toutiao.com/search?keyword=业内揭秘黄牛割肉退周杰伦门票原因)
-1. [姑姑结婚小侄子搞笑致辞](https://so.toutiao.com/search?keyword=姑姑结婚小侄子搞笑致辞)
 1. [国防部：中国陆军将赴印尼参加演习](https://so.toutiao.com/search?keyword=国防部：中国陆军将赴印尼参加演习)
-1. [余承东：又向问界供应链投了10个亿](https://so.toutiao.com/search?keyword=余承东：又向问界供应链投了10个亿)
-1. [女子脱光“小三”衣服游街被判刑](https://so.toutiao.com/search?keyword=女子脱光“小三”衣服游街被判刑)
-1. [男子欠30万不还 法院扣押109双球鞋](https://so.toutiao.com/search?keyword=男子欠30万不还+法院扣押109双球鞋)
-1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
-1. [京东物流成于京东困于京东](https://so.toutiao.com/search?keyword=京东物流成于京东困于京东)
-1. [京东回应刘姓商人被抓谣言](https://so.toutiao.com/search?keyword=京东回应刘姓商人被抓谣言)
 1. [李若彤服饰城砍价1980元买22件衣服](https://so.toutiao.com/search?keyword=李若彤服饰城砍价1980元买22件衣服)
 1. [男子钓到约30斤重鲶鱼](https://so.toutiao.com/search?keyword=男子钓到约30斤重鲶鱼)
 1. [河南村民晒粮不占主干道形成风景线](https://so.toutiao.com/search?keyword=河南村民晒粮不占主干道形成风景线)
 1. [闻到臭味 砸开墙体竟是老鼠的粮仓](https://so.toutiao.com/search?keyword=闻到臭味+砸开墙体竟是老鼠的粮仓)
 1. [刘伯温故里景区刘基庙辟谣发生火灾](https://so.toutiao.com/search?keyword=刘伯温故里景区刘基庙辟谣发生火灾)
-1. [100元能在东北早市买到啥](https://so.toutiao.com/search?keyword=100元能在东北早市买到啥)
-1. [4厅官与1名国企原董事长被决定逮捕](https://so.toutiao.com/search?keyword=4厅官与1名国企原董事长被决定逮捕)
-1. [拐骗儿童罪五年量刑轻了吗](https://so.toutiao.com/search?keyword=拐骗儿童罪五年量刑轻了吗)
 1. [多名公费师范生违约被通报](https://so.toutiao.com/search?keyword=多名公费师范生违约被通报)
 1. [鹈鹕主帅：要多把球交到锡安手中](https://so.toutiao.com/search?keyword=鹈鹕主帅：要多把球交到锡安手中)
 1. [以色列外交人员家属在华被扎伤](https://so.toutiao.com/search?keyword=以色列外交人员家属在华被扎伤)
@@ -62,7 +79,6 @@
 1. [幼师喂孩子呕吐物被责令辞退](https://so.toutiao.com/search?keyword=幼师喂孩子呕吐物被责令辞退)
 1. [退休老人花20万买车遭孩子反对](https://so.toutiao.com/search?keyword=退休老人花20万买车遭孩子反对)
 1. [监管方回应国企被举报“私转6亿”](https://so.toutiao.com/search?keyword=监管方回应国企被举报“私转6亿”)
-1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
 1. [朝媒否认“哈马斯使用朝鲜武器”](https://so.toutiao.com/search?keyword=朝媒否认“哈马斯使用朝鲜武器”)
 1. [白宫称对乌克兰拨款已近耗尽](https://so.toutiao.com/search?keyword=白宫称对乌克兰拨款已近耗尽)
 1. [美军正监视伊朗支持的地区民兵组织](https://so.toutiao.com/search?keyword=美军正监视伊朗支持的地区民兵组织)
@@ -146,7 +162,6 @@
 1. [以军向加沙空投传单 警示居民避难](https://so.toutiao.com/search?keyword=以军向加沙空投传单+警示居民避难)
 1. [9月全国CPI同比持平环比上涨0.2%](https://so.toutiao.com/search?keyword=9月全国CPI同比持平环比上涨0.2%)
 1. [刘德华《红毯先生》定档11月17日](https://so.toutiao.com/search?keyword=刘德华《红毯先生》定档11月17日)
-1. [西安公布落户新政](https://so.toutiao.com/search?keyword=西安公布落户新政)
 1. [朱立伦：韩国瑜先提任国民党副主席](https://so.toutiao.com/search?keyword=朱立伦：韩国瑜先提任国民党副主席)
 1. [长沙电信大楼火灾事故20多人被问责](https://so.toutiao.com/search?keyword=长沙电信大楼火灾事故20多人被问责)
 1. [北京园林绿化局原局长周剑平被开除](https://so.toutiao.com/search?keyword=北京园林绿化局原局长周剑平被开除)
@@ -158,7 +173,6 @@
 1. [安理会将就巴以冲突举行会议](https://so.toutiao.com/search?keyword=安理会将就巴以冲突举行会议)
 1. [伊朗称以方封锁加沙是“种族灭绝”](https://so.toutiao.com/search?keyword=伊朗称以方封锁加沙是“种族灭绝”)
 1. [伊拉克民众抗议以军袭击加沙地带](https://so.toutiao.com/search?keyword=伊拉克民众抗议以军袭击加沙地带)
-1. [记者：驾车闯中领馆嫌犯身份曝光](https://so.toutiao.com/search?keyword=记者：驾车闯中领馆嫌犯身份曝光)
 1. [俄媒：巴以冲突折射美国外交败笔](https://so.toutiao.com/search?keyword=俄媒：巴以冲突折射美国外交败笔)
 1. [郑州楼市高库存的“极限拉扯”](https://so.toutiao.com/search?keyword=郑州楼市高库存的“极限拉扯”)
 1. [媒体解读央行“三定”方案](https://so.toutiao.com/search?keyword=媒体解读央行“三定”方案)
@@ -200,7 +214,6 @@
 1. [广州警方通报乘客裙子现不明液体](https://so.toutiao.com/search?keyword=广州警方通报乘客裙子现不明液体)
 1. [以人民币计价 中国9月出口下降0.6%](https://so.toutiao.com/search?keyword=以人民币计价+中国9月出口下降0.6%)
 1. [CIA承认：70年前的伊朗政变不民主](https://so.toutiao.com/search?keyword=CIA承认：70年前的伊朗政变不民主)
-1. [美国“左派”因为巴以起“内讧”](https://so.toutiao.com/search?keyword=美国“左派”因为巴以起“内讧”)
 1. [旅游博主：因是中国人在叙获善待](https://so.toutiao.com/search?keyword=旅游博主：因是中国人在叙获善待)
 1. [被举报性骚扰男生为保送生？武大回应](https://so.toutiao.com/search?keyword=被举报性骚扰男生为保送生？武大回应)
 1. [山东一男子当街鞭打女子 警方介入](https://so.toutiao.com/search?keyword=山东一男子当街鞭打女子+警方介入)
