--- a/archives/toutiao-search/2023-10-14.md
+++ b/archives/toutiao-search/2023-10-14.md
@@ -1,9 +1,9 @@
 # 2023-10-14
 
-共 87 条
+共 88 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 14 2023 05:00:47 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Oct 14 2023 06:00:48 GMT+0800 (China Standard Time) -->
 1. [孙海洋痛哭称准备上诉](https://so.toutiao.com/search?keyword=孙海洋痛哭称准备上诉)
 1. [记者：驾车闯中领馆嫌犯身份曝光](https://so.toutiao.com/search?keyword=记者：驾车闯中领馆嫌犯身份曝光)
 1. [从“大写意”到“工笔画”](https://so.toutiao.com/search?keyword=从“大写意”到“工笔画”)
@@ -21,38 +21,42 @@
 1. [巴以冲突 为何叙利亚被轰炸](https://so.toutiao.com/search?keyword=巴以冲突+为何叙利亚被轰炸)
 1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
 1. [杨氏家族给碧桂园3亿美元无息借款](https://so.toutiao.com/search?keyword=杨氏家族给碧桂园3亿美元无息借款)
-1. [曝美拟打包处理军援以乌和台湾地区](https://so.toutiao.com/search?keyword=曝美拟打包处理军援以乌和台湾地区)
+1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
 1. [人社局人员拍桌子怒斥群众被清退](https://so.toutiao.com/search?keyword=人社局人员拍桌子怒斥群众被清退)
-1. [大妈南京大屠杀纪念馆比耶拍照遭呵斥](https://so.toutiao.com/search?keyword=大妈南京大屠杀纪念馆比耶拍照遭呵斥)
+1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
 1. [马来西亚女星曾若冰去世](https://so.toutiao.com/search?keyword=马来西亚女星曾若冰去世)
 1. [王毅：中方将派特使赴中东](https://so.toutiao.com/search?keyword=王毅：中方将派特使赴中东)
-1. [二十大后首个自首的“老虎”被公诉](https://so.toutiao.com/search?keyword=二十大后首个自首的“老虎”被公诉)
 1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
-1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
-1. [涂磊评北极鲶鱼事件](https://so.toutiao.com/search?keyword=涂磊评北极鲶鱼事件)
-1. [检察机关对张晓霈涉嫌受贿一案公诉](https://so.toutiao.com/search?keyword=检察机关对张晓霈涉嫌受贿一案公诉)
+1. [曝美拟打包处理军援以乌和台湾地区](https://so.toutiao.com/search?keyword=曝美拟打包处理军援以乌和台湾地区)
+1. [大妈南京大屠杀纪念馆比耶拍照遭呵斥](https://so.toutiao.com/search?keyword=大妈南京大屠杀纪念馆比耶拍照遭呵斥)
+1. [二十大后首个自首的“老虎”被公诉](https://so.toutiao.com/search?keyword=二十大后首个自首的“老虎”被公诉)
 1. [京东物流成于京东困于京东](https://so.toutiao.com/search?keyword=京东物流成于京东困于京东)
-1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
-1. [豆腐脑甜咸之争终于能和解了](https://so.toutiao.com/search?keyword=豆腐脑甜咸之争终于能和解了)
 1. [特朗普“夸奖”黎巴嫩真主党引围攻](https://so.toutiao.com/search?keyword=特朗普“夸奖”黎巴嫩真主党引围攻)
 1. [被通缉电诈犯在缅有公职？警方回应](https://so.toutiao.com/search?keyword=被通缉电诈犯在缅有公职？警方回应)
-1. [9月金融数据出炉：M2同比增长10.3%](https://so.toutiao.com/search?keyword=9月金融数据出炉：M2同比增长10.3%)
-1. [15年前的国产手机系统是什么样的](https://so.toutiao.com/search?keyword=15年前的国产手机系统是什么样的)
-1. [邱毅：朱立伦和赵少康谁的招更高超](https://so.toutiao.com/search?keyword=邱毅：朱立伦和赵少康谁的招更高超)
-1. [美军里根号航母停靠韩国 朝媒回应](https://so.toutiao.com/search?keyword=美军里根号航母停靠韩国+朝媒回应)
-1. [媒体：李思思转型的勇气不该被否定](https://so.toutiao.com/search?keyword=媒体：李思思转型的勇气不该被否定)
+1. [豆腐脑甜咸之争终于能和解了](https://so.toutiao.com/search?keyword=豆腐脑甜咸之争终于能和解了)
 1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
-1. [杨利伟将前往着陆场迎神十六航天员](https://so.toutiao.com/search?keyword=杨利伟将前往着陆场迎神十六航天员)
-1. [退休老人花20万买车遭孩子反对](https://so.toutiao.com/search?keyword=退休老人花20万买车遭孩子反对)
-1. [中国女子赴美见男网友失联最新进展](https://so.toutiao.com/search?keyword=中国女子赴美见男网友失联最新进展)
-1. [9月人民币贷款增加2.31万亿元](https://so.toutiao.com/search?keyword=9月人民币贷款增加2.31万亿元)
-1. [美国会报告鼓吹准备同时与中俄开战](https://so.toutiao.com/search?keyword=美国会报告鼓吹准备同时与中俄开战)
-1. [姑姑结婚小侄子搞笑致辞](https://so.toutiao.com/search?keyword=姑姑结婚小侄子搞笑致辞)
-1. [前3季度人民币存款增加22.48万亿元](https://so.toutiao.com/search?keyword=前3季度人民币存款增加22.48万亿元)
-1. [肺炎支原体感染有何症状](https://so.toutiao.com/search?keyword=肺炎支原体感染有何症状)
-1. [4厅官与1名国企原董事长被决定逮捕](https://so.toutiao.com/search?keyword=4厅官与1名国企原董事长被决定逮捕)
-1. [小孩被父亲关在车库出租房3天](https://so.toutiao.com/search?keyword=小孩被父亲关在车库出租房3天)
+1. [专家呼吁降低或取消货车司机保证金](https://so.toutiao.com/search?keyword=专家呼吁降低或取消货车司机保证金)
+1. [检察机关对张晓霈涉嫌受贿一案公诉](https://so.toutiao.com/search?keyword=检察机关对张晓霈涉嫌受贿一案公诉)
+1. [媒体：李思思转型的勇气不该被否定](https://so.toutiao.com/search?keyword=媒体：李思思转型的勇气不该被否定)
+1. [邱毅：朱立伦和赵少康谁的招更高超](https://so.toutiao.com/search?keyword=邱毅：朱立伦和赵少康谁的招更高超)
+1. [15年前的国产手机系统是什么样的](https://so.toutiao.com/search?keyword=15年前的国产手机系统是什么样的)
 1. [英国将派遣舰艇军机“支持以色列”](https://so.toutiao.com/search?keyword=英国将派遣舰艇军机“支持以色列”)
+1. [中国女子赴美见男网友失联最新进展](https://so.toutiao.com/search?keyword=中国女子赴美见男网友失联最新进展)
+1. [美军里根号航母停靠韩国 朝媒回应](https://so.toutiao.com/search?keyword=美军里根号航母停靠韩国+朝媒回应)
+1. [姑姑结婚小侄子搞笑致辞](https://so.toutiao.com/search?keyword=姑姑结婚小侄子搞笑致辞)
+1. [美国会报告鼓吹准备同时与中俄开战](https://so.toutiao.com/search?keyword=美国会报告鼓吹准备同时与中俄开战)
+1. [杨利伟将前往着陆场迎神十六航天员](https://so.toutiao.com/search?keyword=杨利伟将前往着陆场迎神十六航天员)
+1. [小孩被父亲关在车库出租房3天](https://so.toutiao.com/search?keyword=小孩被父亲关在车库出租房3天)
+1. [涂磊评北极鲶鱼事件](https://so.toutiao.com/search?keyword=涂磊评北极鲶鱼事件)
+1. [退休老人花20万买车遭孩子反对](https://so.toutiao.com/search?keyword=退休老人花20万买车遭孩子反对)
+1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
+1. [4厅官与1名国企原董事长被决定逮捕](https://so.toutiao.com/search?keyword=4厅官与1名国企原董事长被决定逮捕)
+1. [女子脱光“小三”衣服游街被判刑](https://so.toutiao.com/search?keyword=女子脱光“小三”衣服游街被判刑)
+1. [医生向家属打30万借条私了医疗纠纷](https://so.toutiao.com/search?keyword=医生向家属打30万借条私了医疗纠纷)
+1. [肺炎支原体感染有何症状](https://so.toutiao.com/search?keyword=肺炎支原体感染有何症状)
+1. [9月金融数据出炉：M2同比增长10.3%](https://so.toutiao.com/search?keyword=9月金融数据出炉：M2同比增长10.3%)
+1. [9月人民币贷款增加2.31万亿元](https://so.toutiao.com/search?keyword=9月人民币贷款增加2.31万亿元)
+1. [前3季度人民币存款增加22.48万亿元](https://so.toutiao.com/search?keyword=前3季度人民币存款增加22.48万亿元)
 1. [“宁坐宝马哭”女子被曝情变失联](https://so.toutiao.com/search?keyword=“宁坐宝马哭”女子被曝情变失联)
 1. [黎巴嫩将提交针对以色列的紧急抗议](https://so.toutiao.com/search?keyword=黎巴嫩将提交针对以色列的紧急抗议)
 1. [民众党坚持比民调 赵少康回应](https://so.toutiao.com/search?keyword=民众党坚持比民调+赵少康回应)
@@ -60,14 +64,12 @@
 1. [专家：戴口罩能有效预防支原体肺炎](https://so.toutiao.com/search?keyword=专家：戴口罩能有效预防支原体肺炎)
 1. [女子称吃宵夜被陌生老人强行打包](https://so.toutiao.com/search?keyword=女子称吃宵夜被陌生老人强行打包)
 1. [拐骗儿童罪五年量刑轻了吗](https://so.toutiao.com/search?keyword=拐骗儿童罪五年量刑轻了吗)
-1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
 1. [上海银行：起诉姚振华等六位相关方](https://so.toutiao.com/search?keyword=上海银行：起诉姚振华等六位相关方)
 1. [侯友宜对柯文哲阵营提出五大建议](https://so.toutiao.com/search?keyword=侯友宜对柯文哲阵营提出五大建议)
 1. [侯友宜：若胜选将追查绿电和进口蛋](https://so.toutiao.com/search?keyword=侯友宜：若胜选将追查绿电和进口蛋)
 1. [《红毯先生》改编自娱乐圈真实事件](https://so.toutiao.com/search?keyword=《红毯先生》改编自娱乐圈真实事件)
 1. [国防部：中国陆军将赴印尼参加演习](https://so.toutiao.com/search?keyword=国防部：中国陆军将赴印尼参加演习)
 1. [台民调：74.4%支持两岸增进交流](https://so.toutiao.com/search?keyword=台民调：74.4%支持两岸增进交流)
-1. [女子脱光“小三”衣服游街被判刑](https://so.toutiao.com/search?keyword=女子脱光“小三”衣服游街被判刑)
 1. [五旬大姐整形失败怒斥机构是无赖](https://so.toutiao.com/search?keyword=五旬大姐整形失败怒斥机构是无赖)
 1. [知情人士回应杨国强卖私人飞机偿债](https://so.toutiao.com/search?keyword=知情人士回应杨国强卖私人飞机偿债)
 1. [南京银行：与恒大合作业务规模较小](https://so.toutiao.com/search?keyword=南京银行：与恒大合作业务规模较小)
@@ -89,6 +91,5 @@
 1. [巴勒斯坦小伙亲吻母亲和兄弟遗体](https://so.toutiao.com/search?keyword=巴勒斯坦小伙亲吻母亲和兄弟遗体)
 1. [马龙：我想拼尽每一场每一次比赛](https://so.toutiao.com/search?keyword=马龙：我想拼尽每一场每一次比赛)
 1. [运动会上学生演绎从绿皮火车到高铁](https://so.toutiao.com/search?keyword=运动会上学生演绎从绿皮火车到高铁)
-1. [医生向家属打30万借条私了医疗纠纷](https://so.toutiao.com/search?keyword=医生向家属打30万借条私了医疗纠纷)
 1. [2024款别克微蓝6 430公里版上市](https://so.toutiao.com/search?keyword=2024款别克微蓝6+430公里版上市)
 <!-- END TOUTIAO -->
