--- a/archives/toutiao-search/2023-10-14.md
+++ b/archives/toutiao-search/2023-10-14.md
@@ -1,56 +1,72 @@
 # 2023-10-14
 
-共 93 条
+共 109 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 14 2023 07:00:42 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Oct 14 2023 08:23:47 GMT+0800 (China Standard Time) -->
+1. [路人视角全红婵街边花式炫乌龟](https://so.toutiao.com/search?keyword=路人视角全红婵街边花式炫乌龟)
 1. [孙海洋痛哭称准备上诉](https://so.toutiao.com/search?keyword=孙海洋痛哭称准备上诉)
-1. [奥运冠军杨威自曝要终身佩戴呼吸机](https://so.toutiao.com/search?keyword=奥运冠军杨威自曝要终身佩戴呼吸机)
 1. [从“大写意”到“工笔画”](https://so.toutiao.com/search?keyword=从“大写意”到“工笔画”)
-1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
-1. [记者：驾车闯中领馆嫌犯身份曝光](https://so.toutiao.com/search?keyword=记者：驾车闯中领馆嫌犯身份曝光)
-1. [以方要求加沙北部上百万人迁至南部](https://so.toutiao.com/search?keyword=以方要求加沙北部上百万人迁至南部)
-1. [男子在小区低空飞无人机被当场砸落](https://so.toutiao.com/search?keyword=男子在小区低空飞无人机被当场砸落)
-1. [京东回应刘姓商人被抓谣言](https://so.toutiao.com/search?keyword=京东回应刘姓商人被抓谣言)
-1. [郑州消防辟谣加油站爆炸](https://so.toutiao.com/search?keyword=郑州消防辟谣加油站爆炸)
 1. [为何一夜之间美元停止加息](https://so.toutiao.com/search?keyword=为何一夜之间美元停止加息)
+1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
+1. [以方要求加沙北部上百万人迁至南部](https://so.toutiao.com/search?keyword=以方要求加沙北部上百万人迁至南部)
+1. [媒体谈为何俄对巴以冲突谨言慎行](https://so.toutiao.com/search?keyword=媒体谈为何俄对巴以冲突谨言慎行)
+1. [大妈南京大屠杀纪念馆比耶拍照遭呵斥](https://so.toutiao.com/search?keyword=大妈南京大屠杀纪念馆比耶拍照遭呵斥)
+1. [郑州消防辟谣加油站爆炸](https://so.toutiao.com/search?keyword=郑州消防辟谣加油站爆炸)
+1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
 1. [以色列“撤离令”引发加沙民众恐慌](https://so.toutiao.com/search?keyword=以色列“撤离令”引发加沙民众恐慌)
-1. [美国“左派”因为巴以起“内讧”](https://so.toutiao.com/search?keyword=美国“左派”因为巴以起“内讧”)
 1. [警方通报山东一男子当街鞭打女子](https://so.toutiao.com/search?keyword=警方通报山东一男子当街鞭打女子)
 1. [巴以冲突 为何叙利亚被轰炸](https://so.toutiao.com/search?keyword=巴以冲突+为何叙利亚被轰炸)
+1. [欧盟：以色列撤离令“完全不现实”](https://so.toutiao.com/search?keyword=欧盟：以色列撤离令“完全不现实”)
 1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
 1. [杨氏家族给碧桂园3亿美元无息借款](https://so.toutiao.com/search?keyword=杨氏家族给碧桂园3亿美元无息借款)
-1. [村干部掌掴13岁女孩致其鼻骨骨折](https://so.toutiao.com/search?keyword=村干部掌掴13岁女孩致其鼻骨骨折)
+1. [以色列集结大批坦克包围加沙](https://so.toutiao.com/search?keyword=以色列集结大批坦克包围加沙)
 1. [人社局人员拍桌子怒斥群众被清退](https://so.toutiao.com/search?keyword=人社局人员拍桌子怒斥群众被清退)
 1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
-1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
-1. [马来西亚女星曾若冰去世](https://so.toutiao.com/search?keyword=马来西亚女星曾若冰去世)
-1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
-1. [涂磊评北极鲶鱼事件](https://so.toutiao.com/search?keyword=涂磊评北极鲶鱼事件)
-1. [京东物流成于京东困于京东](https://so.toutiao.com/search?keyword=京东物流成于京东困于京东)
+1. [C罗在三个10年里都至少打进100球](https://so.toutiao.com/search?keyword=C罗在三个10年里都至少打进100球)
+1. [男子在小区低空飞无人机被当场砸落](https://so.toutiao.com/search?keyword=男子在小区低空飞无人机被当场砸落)
 1. [豆腐脑甜咸之争终于能和解了](https://so.toutiao.com/search?keyword=豆腐脑甜咸之争终于能和解了)
-1. [王毅：中方将派特使赴中东](https://so.toutiao.com/search?keyword=王毅：中方将派特使赴中东)
+1. [京东回应刘姓商人被抓谣言](https://so.toutiao.com/search?keyword=京东回应刘姓商人被抓谣言)
+1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
+1. [马来西亚女星曾若冰去世](https://so.toutiao.com/search?keyword=马来西亚女星曾若冰去世)
 1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
-1. [曝美拟打包处理军援以乌和台湾地区](https://so.toutiao.com/search?keyword=曝美拟打包处理军援以乌和台湾地区)
-1. [小孩被父亲关在车库出租房3天](https://so.toutiao.com/search?keyword=小孩被父亲关在车库出租房3天)
-1. [大妈南京大屠杀纪念馆比耶拍照遭呵斥](https://so.toutiao.com/search?keyword=大妈南京大屠杀纪念馆比耶拍照遭呵斥)
+1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
 1. [特朗普“夸奖”黎巴嫩真主党引围攻](https://so.toutiao.com/search?keyword=特朗普“夸奖”黎巴嫩真主党引围攻)
-1. [女子脱光“小三”衣服游街被判刑](https://so.toutiao.com/search?keyword=女子脱光“小三”衣服游街被判刑)
-1. [中国女子赴美见男网友失联最新进展](https://so.toutiao.com/search?keyword=中国女子赴美见男网友失联最新进展)
-1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
+1. [欧预赛：C罗双响葡萄牙全胜出线](https://so.toutiao.com/search?keyword=欧预赛：C罗双响葡萄牙全胜出线)
+1. [国际足球友谊赛日本4-1击败加拿大](https://so.toutiao.com/search?keyword=国际足球友谊赛日本4-1击败加拿大)
+1. [斯诺克公开赛：吕昊天淘汰奥沙利文](https://so.toutiao.com/search?keyword=斯诺克公开赛：吕昊天淘汰奥沙利文)
 1. [姑姑结婚小侄子搞笑致辞](https://so.toutiao.com/search?keyword=姑姑结婚小侄子搞笑致辞)
-1. [媒体：李思思转型的勇气不该被否定](https://so.toutiao.com/search?keyword=媒体：李思思转型的勇气不该被否定)
+1. [王艺迪3-2战胜王曼昱晋级女单决赛](https://so.toutiao.com/search?keyword=王艺迪3-2战胜王曼昱晋级女单决赛)
+1. [李若彤服饰城砍价1980元买22件衣服](https://so.toutiao.com/search?keyword=李若彤服饰城砍价1980元买22件衣服)
 1. [业内揭秘黄牛割肉退周杰伦门票原因](https://so.toutiao.com/search?keyword=业内揭秘黄牛割肉退周杰伦门票原因)
-1. [杨利伟将前往着陆场迎神十六航天员](https://so.toutiao.com/search?keyword=杨利伟将前往着陆场迎神十六航天员)
+1. [女子与丈夫相恋13年 越来越好看](https://so.toutiao.com/search?keyword=女子与丈夫相恋13年+越来越好看)
+1. [医生向家属打30万借条私了医疗纠纷](https://so.toutiao.com/search?keyword=医生向家属打30万借条私了医疗纠纷)
+1. [王毅：中方将派特使赴中东](https://so.toutiao.com/search?keyword=王毅：中方将派特使赴中东)
+1. [中国女子赴美见男网友失联最新进展](https://so.toutiao.com/search?keyword=中国女子赴美见男网友失联最新进展)
+1. [欧预赛：葡萄牙3-2斯洛伐克](https://so.toutiao.com/search?keyword=欧预赛：葡萄牙3-2斯洛伐克)
+1. [京东物流成于京东困于京东](https://so.toutiao.com/search?keyword=京东物流成于京东困于京东)
 1. [退休老人花20万买车遭孩子反对](https://so.toutiao.com/search?keyword=退休老人花20万买车遭孩子反对)
+1. [曝美拟打包处理军援以乌和台湾地区](https://so.toutiao.com/search?keyword=曝美拟打包处理军援以乌和台湾地区)
+1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
+1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
+1. [90后大学教师与二胡乐手斗琴百场](https://so.toutiao.com/search?keyword=90后大学教师与二胡乐手斗琴百场)
+1. [媒体：鼓励生育不能只盯着二孩](https://so.toutiao.com/search?keyword=媒体：鼓励生育不能只盯着二孩)
+1. [小孩被父亲关在车库出租房3天](https://so.toutiao.com/search?keyword=小孩被父亲关在车库出租房3天)
+1. [黄金价格或迎来历史新高](https://so.toutiao.com/search?keyword=黄金价格或迎来历史新高)
+1. [肺炎支原体感染有何症状](https://so.toutiao.com/search?keyword=肺炎支原体感染有何症状)
+1. [奥运冠军杨威自曝要终身佩戴呼吸机](https://so.toutiao.com/search?keyword=奥运冠军杨威自曝要终身佩戴呼吸机)
+1. [记者：驾车闯中领馆嫌犯身份曝光](https://so.toutiao.com/search?keyword=记者：驾车闯中领馆嫌犯身份曝光)
+1. [美国“左派”因为巴以起“内讧”](https://so.toutiao.com/search?keyword=美国“左派”因为巴以起“内讧”)
+1. [村干部掌掴13岁女孩致其鼻骨骨折](https://so.toutiao.com/search?keyword=村干部掌掴13岁女孩致其鼻骨骨折)
+1. [涂磊评北极鲶鱼事件](https://so.toutiao.com/search?keyword=涂磊评北极鲶鱼事件)
+1. [女子脱光“小三”衣服游街被判刑](https://so.toutiao.com/search?keyword=女子脱光“小三”衣服游街被判刑)
+1. [媒体：李思思转型的勇气不该被否定](https://so.toutiao.com/search?keyword=媒体：李思思转型的勇气不该被否定)
+1. [杨利伟将前往着陆场迎神十六航天员](https://so.toutiao.com/search?keyword=杨利伟将前往着陆场迎神十六航天员)
 1. [被通缉电诈犯在缅有公职？警方回应](https://so.toutiao.com/search?keyword=被通缉电诈犯在缅有公职？警方回应)
 1. [白宇帆宁理《繁城之下》追剧日历](https://so.toutiao.com/search?keyword=白宇帆宁理《繁城之下》追剧日历)
-1. [肺炎支原体感染有何症状](https://so.toutiao.com/search?keyword=肺炎支原体感染有何症状)
 1. [二十大后首个自首的“老虎”被公诉](https://so.toutiao.com/search?keyword=二十大后首个自首的“老虎”被公诉)
-1. [医生向家属打30万借条私了医疗纠纷](https://so.toutiao.com/search?keyword=医生向家属打30万借条私了医疗纠纷)
 1. [中国手提袋风靡非洲成“致富口袋”](https://so.toutiao.com/search?keyword=中国手提袋风靡非洲成“致富口袋”)
 1. [女篮李缘：我们要登上奥运会领奖台](https://so.toutiao.com/search?keyword=女篮李缘：我们要登上奥运会领奖台)
-1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
 1. [流感易感人群有哪些](https://so.toutiao.com/search?keyword=流感易感人群有哪些)
 1. [河南村民晒粮不占主干道形成风景线](https://so.toutiao.com/search?keyword=河南村民晒粮不占主干道形成风景线)
 1. [女子称吃宵夜被陌生老人强行打包](https://so.toutiao.com/search?keyword=女子称吃宵夜被陌生老人强行打包)
